--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,18 +17,20 @@
 <%= button_to 'Dark Mode', moon_path, method: :get, class: 'header-button', form: {style: 'display:inline-block;'}, :style => "font-family: 'Cupertino'; text-align: center; color: #0E2B3F; font-size: 20pt; background-color: lightgreen; padding: 7px 12px; text-align: center; border-radius: 20px; margin: 2px 2px 2px 2px;" %>
 <% end %>
 
-<% if cookies[:bigletters] %>
-<%= button_to 'Text Size Down', standardletters_path, method: :get, class: 'header-button', form: {style: 'display:inline-block;'}, :style => "font-family: 'Cupertino'; text-align: center; color: #0E2B3F; font-size: 20pt; background-color: lightgreen; padding: 7px 12px; text-align: center; border-radius: 20px; margin: 2px 2px 2px 2px;" %>
-<% else %>
-<%= button_to 'Text Size Up', bigletters_path, method: :get, class: 'header-button', form: {style: 'display:inline-block;'}, :style => "font-family: 'Cupertino'; text-align: center; color: #0E2B3F; font-size: 20pt; background-color: lightgreen; padding: 7px 12px; text-align: center; border-radius: 20px; margin: 2px 2px 2px 2px;" %>
-<% end %>
-
-<% if cookies[:broadmargins] %>
-<%= button_to 'Margins Down', standardmargins_path, method: :get, class: 'header-button', form: {style: 'display:inline-block;'}, :style => "font-family: 'Cupertino'; text-align: center; color: #0E2B3F; font-size: 20pt; background-color: lightgreen; padding: 7px 12px; text-align: center; border-radius: 20px; margin: 2px 2px 2px 2px;" %>
-<% else %>
-<%= button_to 'Margins Up', broadmargins_path, method: :get, class: 'header-button', form: {style: 'display:inline-block;'}, :style => "font-family: 'Cupertino'; text-align: center; color: #0E2B3F; font-size: 20pt; background-color: lightgreen; padding: 7px 12px; text-align: center; border-radius: 20px; margin: 2px 2px 2px 2px;" %>
-<% end %> <br>
 </div>
 
 
 <hr>
+
+
+<%# if cookies[:bigletters] %>
+<%# button_to 'Text Size Down', standardletters_path, method: :get, class: 'header-button', form: {style: 'display:inline-block;'}, :style => "font-family: 'Cupertino'; text-align: center; color: #0E2B3F; font-size: 20pt; background-color: lightgreen; padding: 7px 12px; text-align: center; border-radius: 20px; margin: 2px 2px 2px 2px;" %>
+<%#else %>
+<%#= button_to 'Text Size Up', bigletters_path, method: :get, class: 'header-button', form: {style: 'display:inline-block;'}, :style => "font-family: 'Cupertino'; text-align: center; color: #0E2B3F; font-size: 20pt; background-color: lightgreen; padding: 7px 12px; text-align: center; border-radius: 20px; margin: 2px 2px 2px 2px;" %>
+<%# end %>
+
+<%# if cookies[:broadmargins] %>
+<%#= button_to 'Margins Down', standardmargins_path, method: :get, class: 'header-button', form: {style: 'display:inline-block;'}, :style => "font-family: 'Cupertino'; text-align: center; color: #0E2B3F; font-size: 20pt; background-color: lightgreen; padding: 7px 12px; text-align: center; border-radius: 20px; margin: 2px 2px 2px 2px;" %>
+<%# else %>
+<%#= button_to 'Margins Up', broadmargins_path, method: :get, class: 'header-button', form: {style: 'display:inline-block;'}, :style => "font-family: 'Cupertino'; text-align: center; color: #0E2B3F; font-size: 20pt; background-color: lightgreen; padding: 7px 12px; text-align: center; border-radius: 20px; margin: 2px 2px 2px 2px;" %>
+<%# end %> <br>
