--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,8 @@
 }
 
 @font-face {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Cupertino';
+  src: font-url('/assets/fonts/Cupertino.tff')
 }
 
 @font-face {
