--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,8 +13,10 @@
 }
 
 @font-face {
-  font-family: 'Cupertino';
-  src: font-url('/assets/fonts/Cupertino.tff')
+  font-family: Arial, Helvetica, sans-serif;
+  /* /* font-family: 'Cupertino'; */
+  font-family: Helvetica;
+  src: font-url('/assets/fonts/Cupertino.tff') */
 }
 
 @font-face {
@@ -34,7 +36,8 @@
 }
 
 #welcome {
-  font-family: 'Cupertino';
+  /* font-family: 'Cupertino'; */
+  font-family: Helvetica;
   text-align: left;
   text-decoration: none;
   font-style: normal;
@@ -51,7 +54,8 @@
 }
 
 #welcome h1 {
-  font-family: 'Cupertino';
+  /* font-family: 'Cupertino'; */
+  font-family: Helvetica;
   display: block;
   margin-block-start: 0.2em;
   margin-block-end: 0.1em;
@@ -67,7 +71,8 @@
 
 #welcome h2 {
     display: block;
-    font-family: 'Cupertino';
+    /* font-family: 'Cupertino'; */
+    font-family: Helvetica;
     margin-block-start: 0.4em;
     margin-block-end: 0.4em;
     margin-inline-start: 0px;
@@ -77,7 +82,8 @@
 }
 
 #welcome a {
-    font-family: 'Cupertino';
+    /* font-family: 'Cupertino'; */
+    font-family: Helvetica;
     text-align: center;
     text-decoration: none;
     font-style: normal;
@@ -94,7 +100,8 @@
     }
 
 #welcome a:visited {
-  font-family: 'Cupertino';
+  /* font-family: 'Cupertino'; */
+  font-family: Helvetica;
   text-align: center;
   text-decoration: none;
   font-style: normal;
@@ -125,7 +132,8 @@ text-decoration: underline;
 
 #standard_page h1 {
     display: block;
-    font-family: 'Cupertino';
+    /* font-family: 'Cupertino'; */
+    font-family: Helvetica;
     margin-block-start: 0.2em;
     margin-block-end: 0.2em;
     margin-inline-start: 0px;
@@ -136,7 +144,8 @@ text-decoration: underline;
 
 #standard_page h2 {
     display: block;
-    font-family: 'Cupertino';
+    /* font-family: 'Cupertino'; */
+    font-family: Helvetica;
     margin-block-start: 0.4em;
     margin-block-end: 0.4em;
     margin-inline-start: 0px;
@@ -214,7 +223,8 @@ text-decoration: underline;
 }
 
 #homepage h1 {
-    font-family: 'Cupertino';
+    /* font-family: 'Cupertino'; */
+    font-family: Helvetica;
     text-align: left;
     text-decoration: none;
     font-style: normal;
@@ -279,7 +289,8 @@ text-decoration: underline;
 }
 
 #homepage a:link {
-  font-family: 'Cupertino';
+  /* font-family: 'Cupertino'; */
+  font-family: Helvetica;
   text-align: center;
   text-decoration: none;
   font-style: normal;
@@ -293,7 +304,8 @@ text-decoration: underline;
 }
 
 #homepage a:visited {
-  font-family: 'Cupertino';
+  /* font-family: 'Cupertino'; */
+  font-family: Helvetica;
   text-decoration: none;
   color: #0E2B3F;
 }
@@ -319,7 +331,8 @@ text-decoration: underline;
   }
 
 #story h1 {
-    font-family: 'Cupertino';
+    /* font-family: 'Cupertino'; */
+    font-family: Helvetica;
     text-align: left;
     text-decoration: none;
     font-style: normal;
@@ -387,7 +400,8 @@ text-decoration: underline;
 }
 
 #story a:link {
-  font-family: 'Cupertino';
+  /* font-family: 'Cupertino'; */
+  font-family: Helvetica;
   text-align: center;
   text-decoration: none;
   font-style: normal;
@@ -401,7 +415,8 @@ text-decoration: underline;
 }
 
 #story a:visited {
-  font-family: 'Cupertino';
+  /* font-family: 'Cupertino'; */
+  font-family: Helvetica;
   text-decoration: none;
   color: #0E2B3F;
 }
@@ -423,7 +438,8 @@ text-decoration: underline;
 }
 
 #form h1 {
-    font-family: 'Cupertino';
+    /* font-family: 'Cupertino'; */
+    font-family: Helvetica;
     text-align: left;
     text-decoration: none;
     font-style: normal;
@@ -439,7 +455,8 @@ text-decoration: underline;
 }
 
 #form h2 {
-      font-family: 'Cupertino';
+      /* font-family: 'Cupertino'; */
+      font-family: Helvetica;
       display: block;
       margin-block-start: 0.4em;
       margin-block-end: 0.4em;
@@ -507,7 +524,8 @@ text-decoration: underline;
 }
 
 #form a:link {
-  font-family: 'Cupertino';
+  /* font-family: 'Cupertino'; */
+  font-family: Helvetica;
   text-align: center;
   text-decoration: none;
   font-style: normal;
@@ -521,7 +539,8 @@ text-decoration: underline;
 }
 
 #form a:visited {
-  font-family: 'Cupertino';
+  /* font-family: 'Cupertino'; */
+  font-family: Helvetica;
   text-decoration: none;
   color: #0E2B3F;
 }
@@ -560,7 +579,8 @@ text-decoration: underline;
 }
 
 #header h1 {
-    font-family: 'Cupertino';
+    /* font-family: 'Cupertino'; */
+    font-family: Helvetica;
     text-align: left;
     text-decoration: none;
     font-style: normal;
@@ -625,7 +645,8 @@ text-decoration: underline;
 }
 
 #header a:link {
-  font-family: 'Cupertino';
+  /* font-family: 'Cupertino'; */
+  font-family: Helvetica;
   text-align: center;
   text-decoration: none;
   font-style: normal;
@@ -641,7 +662,8 @@ text-decoration: underline;
 
 
 #header a:visited {
-  font-family: 'Cupertino';
+  /* font-family: 'Cupertino'; */
+  font-family: Helvetica;
   text-decoration: none;
   color: #0E2B3F;
 }
