--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@
   font-family: Arial, Helvetica, sans-serif;
   /* /* font-family: 'Cupertino'; */
   font-family: Helvetica;
-  /* src: font-url('/assets/fonts/Cupertino.tff') */ */
+  /* src: font-url('/assets/fonts/Cupertino.tff') */
 }
 
 @font-face {
