--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,9 +14,8 @@
 
 @font-face {
   font-family: Arial, Helvetica, sans-serif;
-  /* /* font-family: 'Cupertino'; */
-  font-family: Helvetica;
-  /* src: font-url('/assets/fonts/Cupertino.tff') */
+  font-family: 'Cupertino';
+  src: font-url('/assets/fonts/Cupertino.tff')
 }
 
 @font-face {
