--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,8 +35,8 @@
 }
 
 #welcome {
-  /* font-family: 'Cupertino'; */
-  font-family: Helvetica;
+  font-family: 'Cupertino';
+  /* font-family: Helvetica; */
   text-align: left;
   text-decoration: none;
   font-style: normal;
@@ -53,8 +53,8 @@
 }
 
 #welcome h1 {
-  /* font-family: 'Cupertino'; */
-  font-family: Helvetica;
+  font-family: 'Cupertino';
+  /* font-family: Helvetica; */
   display: block;
   margin-block-start: 0.2em;
   margin-block-end: 0.1em;
@@ -99,8 +99,8 @@
     }
 
 #welcome a:visited {
-  /* font-family: 'Cupertino'; */
-  font-family: Helvetica;
+  font-family: 'Cupertino';
+  /* font-family: Helvetica; */
   text-align: center;
   text-decoration: none;
   font-style: normal;
@@ -288,8 +288,8 @@ text-decoration: underline;
 }
 
 #homepage a:link {
-  /* font-family: 'Cupertino'; */
-  font-family: Helvetica;
+  font-family: 'Cupertino';
+  /* font-family: Helvetica; */
   text-align: center;
   text-decoration: none;
   font-style: normal;
@@ -303,8 +303,8 @@ text-decoration: underline;
 }
 
 #homepage a:visited {
-  /* font-family: 'Cupertino'; */
-  font-family: Helvetica;
+  font-family: 'Cupertino';
+  /* font-family: Helvetica; */
   text-decoration: none;
   color: #0E2B3F;
 }
@@ -399,8 +399,8 @@ text-decoration: underline;
 }
 
 #story a:link {
-  /* font-family: 'Cupertino'; */
-  font-family: Helvetica;
+  font-family: 'Cupertino';
+  /* font-family: Helvetica; */
   text-align: center;
   text-decoration: none;
   font-style: normal;
@@ -414,8 +414,8 @@ text-decoration: underline;
 }
 
 #story a:visited {
-  /* font-family: 'Cupertino'; */
-  font-family: Helvetica;
+  font-family: 'Cupertino';
+  /* font-family: Helvetica; */
   text-decoration: none;
   color: #0E2B3F;
 }
@@ -523,8 +523,8 @@ text-decoration: underline;
 }
 
 #form a:link {
-  /* font-family: 'Cupertino'; */
-  font-family: Helvetica;
+  font-family: 'Cupertino';
+  /* font-family: Helvetica; */
   text-align: center;
   text-decoration: none;
   font-style: normal;
@@ -538,8 +538,8 @@ text-decoration: underline;
 }
 
 #form a:visited {
-  /* font-family: 'Cupertino'; */
-  font-family: Helvetica;
+  font-family: 'Cupertino';
+  /* font-family: Helvetica; */
   text-decoration: none;
   color: #0E2B3F;
 }
@@ -644,8 +644,8 @@ text-decoration: underline;
 }
 
 #header a:link {
-  /* font-family: 'Cupertino'; */
-  font-family: Helvetica;
+  font-family: 'Cupertino';
+  /* font-family: Helvetica; */
   text-align: center;
   text-decoration: none;
   font-style: normal;
@@ -661,8 +661,8 @@ text-decoration: underline;
 
 
 #header a:visited {
-  /* font-family: 'Cupertino'; */
-  font-family: Helvetica;
+  font-family: 'Cupertino';
+  /* font-family: Helvetica; */
   text-decoration: none;
   color: #0E2B3F;
 }
