--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
 @font-face {
   font-family: Arial, Helvetica, sans-serif;
   font-family: 'Cupertino';
-  src: url('/assets/Cupertino.tff')
+  src: url('/assets/fonts/Cupertino.tff')
 }
 
 @font-face {
