--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,8 +14,7 @@
 
 @font-face {
   font-family: Arial, Helvetica, sans-serif;
-  font-family: 'Cupertino';
-  src: url('../assets/fonts/Cupertino.tff');
+  src: url('../assets/fonts/helvetica.tff');
 }
 
 @font-face {
@@ -35,7 +34,7 @@
 }
 
 #welcome {
-  font-family: 'Cupertino';
+  font-family: 'Helvetica';
   /* font-family: Helvetica; */
   text-align: left;
   text-decoration: none;
@@ -53,7 +52,7 @@
 }
 
 #welcome h1 {
-  font-family: 'Cupertino';
+  font-family: 'Helvetica';
   /* font-family: Helvetica; */
   display: block;
   margin-block-start: 0.2em;
@@ -70,7 +69,7 @@
 
 #welcome h2 {
     display: block;
-    /* font-family: 'Cupertino'; */
+    /* font-family: 'helvetica'; */
     font-family: Helvetica;
     margin-block-start: 0.4em;
     margin-block-end: 0.4em;
@@ -81,7 +80,7 @@
 }
 
 #welcome a {
-    /* font-family: 'Cupertino'; */
+    /* font-family: 'helvetica'; */
     font-family: Helvetica;
     text-align: center;
     text-decoration: none;
@@ -99,7 +98,7 @@
     }
 
 #welcome a:visited {
-  font-family: 'Cupertino';
+  font-family: 'helvetica';
   /* font-family: Helvetica; */
   text-align: center;
   text-decoration: none;
@@ -131,7 +130,7 @@ text-decoration: underline;
 
 #standard_page h1 {
     display: block;
-    /* font-family: 'Cupertino'; */
+    /* font-family: 'helvetica'; */
     font-family: Helvetica;
     margin-block-start: 0.2em;
     margin-block-end: 0.2em;
@@ -143,7 +142,7 @@ text-decoration: underline;
 
 #standard_page h2 {
     display: block;
-    /* font-family: 'Cupertino'; */
+    /* font-family: 'helvetica'; */
     font-family: Helvetica;
     margin-block-start: 0.4em;
     margin-block-end: 0.4em;
@@ -222,7 +221,7 @@ text-decoration: underline;
 }
 
 #homepage h1 {
-    /* font-family: 'Cupertino'; */
+    /* font-family: 'helvetica'; */
     font-family: Helvetica;
     text-align: left;
     text-decoration: none;
@@ -288,7 +287,7 @@ text-decoration: underline;
 }
 
 #homepage a:link {
-  font-family: 'Cupertino';
+  font-family: 'helvetica';
   /* font-family: Helvetica; */
   text-align: center;
   text-decoration: none;
@@ -303,7 +302,7 @@ text-decoration: underline;
 }
 
 #homepage a:visited {
-  font-family: 'Cupertino';
+  font-family: 'helvetica';
   /* font-family: Helvetica; */
   text-decoration: none;
   color: #0E2B3F;
@@ -330,7 +329,7 @@ text-decoration: underline;
   }
 
 #story h1 {
-    /* font-family: 'Cupertino'; */
+    /* font-family: 'helvetica'; */
     font-family: Helvetica;
     text-align: left;
     text-decoration: none;
@@ -399,7 +398,7 @@ text-decoration: underline;
 }
 
 #story a:link {
-  font-family: 'Cupertino';
+  font-family: 'helvetica';
   /* font-family: Helvetica; */
   text-align: center;
   text-decoration: none;
@@ -414,7 +413,7 @@ text-decoration: underline;
 }
 
 #story a:visited {
-  font-family: 'Cupertino';
+  font-family: 'helvetica';
   /* font-family: Helvetica; */
   text-decoration: none;
   color: #0E2B3F;
@@ -437,7 +436,7 @@ text-decoration: underline;
 }
 
 #form h1 {
-    /* font-family: 'Cupertino'; */
+    /* font-family: 'helvetica'; */
     font-family: Helvetica;
     text-align: left;
     text-decoration: none;
@@ -454,7 +453,7 @@ text-decoration: underline;
 }
 
 #form h2 {
-      /* font-family: 'Cupertino'; */
+      /* font-family: 'helvetica'; */
       font-family: Helvetica;
       display: block;
       margin-block-start: 0.4em;
@@ -523,7 +522,7 @@ text-decoration: underline;
 }
 
 #form a:link {
-  font-family: 'Cupertino';
+  font-family: 'helvetica';
   /* font-family: Helvetica; */
   text-align: center;
   text-decoration: none;
@@ -538,7 +537,7 @@ text-decoration: underline;
 }
 
 #form a:visited {
-  font-family: 'Cupertino';
+  font-family: 'helvetica';
   /* font-family: Helvetica; */
   text-decoration: none;
   color: #0E2B3F;
@@ -578,7 +577,7 @@ text-decoration: underline;
 }
 
 #header h1 {
-    /* font-family: 'Cupertino'; */
+    /* font-family: 'helvetica'; */
     font-family: Helvetica;
     text-align: left;
     text-decoration: none;
@@ -644,7 +643,7 @@ text-decoration: underline;
 }
 
 #header a:link {
-  font-family: 'Cupertino';
+  font-family: 'helvetica';
   /* font-family: Helvetica; */
   text-align: center;
   text-decoration: none;
@@ -661,7 +660,7 @@ text-decoration: underline;
 
 
 #header a:visited {
-  font-family: 'Cupertino';
+  font-family: 'helvetica';
   /* font-family: Helvetica; */
   text-decoration: none;
   color: #0E2B3F;
