--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,4 @@
+<hr class = "footer-break"/>
 <div class="footer">
-  <p class="footer-text">
-     Visit our github! <%= link_to image_tag("github.png", :class => "github", :alt => "visit github"), "https://github.com/sylwiavargas/Fierce-Stories", :target => "_blank" %>
-    </p>
+  <%= link_to image_tag("github.png", :class => "github", :alt => "visit github"), "https://github.com/sylwiavargas/Fierce-Stories", :target => "_blank" %> VISIT OUR GITHUB
 </div>
