--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,10 @@
-<div id="welcome">
-<p>changing the world one story at a time</p>
+<div>
+<h1>FIERCE STORIES</h1>
+<h2>changing the world one story at a time</h2>
 
-<h1>Fierce <br>
-  Stories</h1>
+  <div class="welcome-margin">
+  <%= button_to "Log in", new_login_path, method: :get, class: 'button mainb' %>
+  <%= button_to "Sign up", new_user_path, method: :get, class: 'button mainb' %>
+  </div>
 
-  <%= link_to "Log in", new_login_path %>
-  <%= link_to "Sign up", new_user_path %>
 </div>
-<!-- what what -->
