--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,8 +3,8 @@
 <h2>changing the world one story at a time</h2>
 
   <div class="welcome-margin">
-  <%= button_to "Log in", new_login_path, method: :get, class: 'button mainb' %>
-  <%= button_to "Sign up", new_user_path, method: :get, class: 'button mainb' %>
+  <%= button_to "Log in", new_login_path, method: :get, class: 'button main-button' %> 
+  <%= button_to "Sign up", new_user_path, method: :get, class: 'button main-button left-margin' %>
   </div>
 
 </div>
