--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
 
   <div class="welcome-margin">
   <%= button_to "Log in", new_login_path, method: :get, class: 'button main-button' %> 
-  <%= button_to "Sign up", new_user_path, method: :get, class: 'button main-button left-margin' %>
+  <%= button_to "Sign up", new_user_path, method: :get, class: 'button main-button left-margin' %><br/>
   </div>
 
 </div>
