--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,11 +21,27 @@
        url('Roboto-ThinItalic-webfont.svg#RobotoThinItalic') format('svg');
 }
 
+html{
+  position: relative;
+  min-height: 100%;
+}
+
 body{
-  margin: 2%;
+  margin: 2% 2% 10%;
   font-family: 'Roboto Regular', sans-serif;
   color: #002F5E;
   font-weight: 100;
+  padding: 25px;
+}
+
+.footer{
+  position: absolute;
+  font-size: 25px;
+  left: 2;
+  bottom: 0;
+  height: 150px;
+  width: 93%;
+  overflow: hidden;
 }
 
 .footer-break{
@@ -33,7 +49,6 @@ body{
   background-color: #002F5E; 
   height: 2px; 
   border: 0;
-  margin-top: -50px;
 }
 
 .github{
@@ -44,10 +59,6 @@ body{
   height: 45px;
 }
 
-.footer {
-  font-size: 25px;
-}
-
 .header {
   background-color: #002F5E; 
 }
@@ -56,16 +67,24 @@ body{
   text-align: center; 
   font-size: 25px;
   color: white;
-  padding: 1.5%;
+  height: 5.5vh;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 
-.main-button {
-  background-color: #002F5E; 
+.main-button{
+  background-color: #F10060; 
   float: left;
 }
 
+.main-button:focus, .main-button:hover{
+  background-color: white; 
+  border: 1px #F10060 solid; 
+  color: #002F5E; 
+}
+
 .left-margin{
-  margin-left: 2%;
+  margin-left: 1%;
 }
 
 h1{
@@ -79,7 +98,7 @@ h2{
   font-size: 29px;
   line-height: 0%;
   font-weight: 100;
-  margin-bottom: 10%;
+  margin-bottom: 3%;
 }
 
 .welcome-margin{
