--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,5 @@
-<hr class = "footer-break"/>
+
 <div class="footer">
-  <%= link_to image_tag("github.png", :class => "github", :alt => "visit github"), "https://github.com/sylwiavargas/Fierce-Stories", :target => "_blank" %> VISIT OUR GITHUB
+<hr class = "footer-break"/>
+  <%= link_to image_tag("github.png", :class => "github", :alt => "visit github"), "https://github.com/sylwiavargas/Fierce-Stories", :target => "_blank" %>
 </div>
