--- a/app/views/layouts/_header_welcome.html.erb
+++ b/app/views/layouts/_header_welcome.html.erb
@@ -1,4 +1,4 @@
-<div align="right">
+<div>
   <% if cookies[:moon] %>
   <%= button_to 'LIGHT MODE', sun_path, method: :get, class: 'button header welcome-margin' %>
   <% else %>
