--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -111,6 +111,10 @@ h2{
   margin-bottom: 3%;
 }
 
+.welcome{
+  margin-top: 35vh;
+}
+
 .welcome-margin{
   margin-bottom: 20vh;
 }
@@ -161,6 +165,7 @@ h3{
   background-color: #F10060;
   display: block;
   margin-top: 2%;
+  margin-bottom: 1%;
 }
 
 .login-button:hover, .login-button:focus {
@@ -169,7 +174,7 @@ h3{
   color: white;
 }
 
-.login>label{
+.login>label, .field_with_errors>label{
   color: #002F5E;
   font-size: 20px;
   display: block;
@@ -180,9 +185,10 @@ h3{
   font-size: 15px;
   width: 25vw;
   text-align: center;
+  margin-bottom: 2%;
 }
 
-form.login>input:not(.login-button){
+ div.field_with_errors>input, form.login>input:not(.login-button){
   background-color: white; 
   color: #002F5E;
   padding: 1%;
@@ -191,6 +197,10 @@ form.login>input:not(.login-button){
   width: 25vw;
   border: 2px #F10060 solid; 
   display: block;
+}
+
+.errors{
+  margin-bottom: 5%;
 }
 
 input:-webkit-autofill,
