styled signin page

--- a/app/views/story_books/index.html.erb
+++ b/app/views/story_books/index.html.erb
@@ -1,6 +1,5 @@
-<div id="homepage">
-<br>
-<h1>Ready for an adventure?</h1>
+<div class="homepage">
+<h3>Ready for an adventure?</h3>
 <br>
 
 <% if @logged_in_user.story_books.first == nil %>
