--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,10 @@
 <div class="welcome">
-<h1>FIERCE STORIES</h1>
-<h2>changing the world one story at a time</h2>
+  <h1>FIERCE STORIES</h1>
+  <h2>changing the world one story at a time</h2>
 
-  <div class="welcome-margin">
-  <%= button_to "Log in", new_login_path, method: :get, class: 'button main-button' %> 
-  <%= button_to "Sign up", new_user_path, method: :get, class: 'button main-button left-margin' %><br/>
-  </div>
+    <div class="welcome-bottom-margin">
+      <%= button_to "Log in", new_login_path, method: :get, class: 'button main-button' %> 
+      <%= button_to "Sign up", new_user_path, method: :get, class: 'button main-button left-margin' %><br/>
+    </div>
 
 </div>
